@@ -1,7 +1,7 @@
 #!/bin/bash
 if [[ -z ${MAVEN_OPTS} ]]; then
     echo "The environment variable 'MAVEN_OPTS' is not set, setting it for you";
-    MAVEN_OPTS="-Xms256m -Xmx2G"
+    MAVEN_OPTS="-Xms256m -Xmx1524m -XX:PermSize=300m"
 fi
 echo "MAVEN_OPTS is set to '$MAVEN_OPTS'";
-mvnDebug clean install alfresco:run -DskipTests=true
+mvn clean install -Pamp-to-war
